--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "Client for sugo-enpoint-actor",
   "main": "lib",
+  "browser": "shims",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "build": "babel -d shims lib",
+    "prepare": "npm run build"
   },
   "repository": "FujiHaruka/sugo-endpoint-caller",
   "keywords": [
@@ -25,6 +28,7 @@
     "npm": ">=3"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "sugo-actor": "^4.7.5",
     "sugo-endpoint-actor": "^1.0.2",
     "sugo-hub": "^5.4.3"
